--- a/confs/config.json
+++ b/confs/config.json
@@ -5,8 +5,8 @@
             "args": ""
         },
         {
-            "exec_path": "notepad.exe",
-            "args": ""
+            "exec_path": "C:\\Windows\\notepad.exe",
+            "args": "D:\\WindowsWatchdog\\windows_watch_dog\\confs\\config.json"
         },
         {
             "exec_path": "C:\\Program Files (x86)\\Foxit Software\\Foxit PDF Reader\\FoxitPDFReader.exe",
@@ -16,12 +16,7 @@
             "exec_path": "C:\\Users\\monem\\AppData\\Local\\Viber\\Viber.exe",
             "args": ""
         }
-        ,
-        {
-            "exec_path": "C:\\Users\\monem\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\python.exe",
-            "args": "d:\\WindowsWatchdog\\hello.py"
-        }
-         
+
         
     ]
 }
